--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,4 +1,4 @@
-<div class="uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid="masonry: true">
+<div uk-lightbox="animation: slide" class="uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid="masonry: true">
 
 	{% for post in site.posts %}
 	
@@ -7,8 +7,8 @@
 	{% else %}
 <div class="post {{ post.year }}"> 
 	{% endif %}	
-     <a href="{{ site.url }}/art{{ post.url }}" title="{{ post.title }}, {{ post.date | date: '%B %Y' }}" data-caption="{{ post.title }} | {{ post.date | date: '%B %Y' }} | {{ post.excerpt }}">
-	     <img src="{{ site.url }}/art/img/thumbnails/{{ post.thumbnail }}" alt="{{ post.title }} by Liz Lorena">
+     <a href="{{ site.url }}/ai/img/{{ post.img }}" title="{{ post.title }}, {{ post.date | date: '%B %Y' }}" data-caption="{{ post.title }} | {{ post.date | date: '%B %Y' }} | {{ post.excerpt }}">
+	     <img src="{{ site.url }}/ai/img/{{ post.img }}" alt="{{ post.title }} by Liz Lorena">
 	</a>	
 </div>
 
