--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,12 +1,8 @@
 <div uk-lightbox="animation: slide" class="uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid="masonry: true">
 
-	{% for post in site.posts %}
+{% for post in site.posts %}
 	
-	{% if post.year < 2020 %}
-<div class="post 2010s"> 
-	{% else %}
-<div class="post {{ post.year }}"> 
-	{% endif %}	
+<div class="post {{ post.tag }}"> 
      <a href="{{ site.url }}/ai/img/{{ post.img }}" title="{{ post.title }}, {{ post.date | date: '%B %Y' }}" data-caption="{{ post.title }} | {{ post.date | date: '%B %Y' }} | {{ post.excerpt }}">
 	     <img src="{{ site.url }}/ai/img/{{ post.img }}" alt="{{ post.title }} by Liz Lorena">
 	</a>	
