--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,34 +52,10 @@
 	$("a").removeClass("active");
 	$("a.all").addClass("active");
       });
-      $("a.2010s").click(function(){
-        $("div.post:not([2010s])").addClass("hide");
-	$("a:not([2010s])").removeClass("active");
-        $("div.post.2010s").removeClass("hide");
-	$("a.2010s").addClass("active");
-      });      
-      $("a.2020").click(function(){
-        $("div.post:not([2020])").addClass("hide");
-        $("a:not([2020])").removeClass("active");
-        $("div.post.2020").removeClass("hide");
-        $("a.2020").addClass("active");
-      });
-      $("a.2021").click(function(){
-        $("div.post:not([2021])").addClass("hide");
-        $("a:not([2021])").removeClass("active");
-        $("div.post.2021").removeClass("hide");
-        $("a.2021").addClass("active");
-      });
-      $("a.2022").click(function(){
-        $("div.post:not([2022])").addClass("hide");
-        $("a:not([2022])").removeClass("active");
-        $("div.post.2022").removeClass("hide");
-        $("a.2022").addClass("active");
-      });
-	$("a.2023").click(function(){
-        $("div.post:not([2023])").addClass("hide");
-        $("a:not([2023])").removeClass("active");
-        $("div.post.2023").removeClass("hide");
+	$("a.landscape").click(function(){
+        $("div.post:not([landscape])").addClass("hide");
+        $("a:not([landscape])").removeClass("active");
+        $("div.post.landscape").removeClass("hide");
         $("a.2023").addClass("active");
       });
       
