--- a/_includes/pages.html
+++ b/_includes/pages.html
@@ -1,1 +1,1 @@
-<a href="#all" class="all active">All</a> ◆ <a href="#landscape" class="landscape">Landscape</a> ◆ <a href="/links">About</a>
+<a href="#all" class="all active">All</a> ◆ <a href="#landscape" class="landscape">Landscape</a> ◆ <a href="/links" target="_blank">About</a>
