--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
 
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRN4MW5J79"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QGXE82ZM0G"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JRN4MW5J79');
+  gtag('config', 'G-QGXE82ZM0G');
 </script>
+
  
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
