--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,10 @@
 	
 	<link rel="stylesheet" href="/art/uikit/css/uikit.min.css" />
 	
-    <link href="/art/index.css" rel="stylesheet">
+    <link href="/ai/index.css" rel="stylesheet">
 	
-<script src="/art/uikit/js/uikit.min.js"></script>
-    <script src="/art/uikit/js/uikit-icons.min.js"></script>
+<script src="/ai/uikit/js/uikit.min.js"></script>
+    <script src="/ai/uikit/js/uikit-icons.min.js"></script>
 	
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -89,7 +89,7 @@
 	
 </div>
     
-<script src="/art/mode-switcher.js"></script>
+<script src="/ai/mode-switcher.js"></script>
     
 </body>
 </html>
