--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,12 +32,12 @@
 	
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/css/uikit.min.css" />
 	
-	<link rel="stylesheet" href="/art/uikit/css/uikit.min.css" />
+	<link rel="stylesheet" href="/ai/uikit/css/uikit.min.css" />
 	
-    <link href="/art/index.css" rel="stylesheet">
+    <link href="/ai/index.css" rel="stylesheet">
 	
-<script src="/art/uikit/js/uikit.min.js"></script>
-    <script src="/art/uikit/js/uikit-icons.min.js"></script>
+<script src="/ai/uikit/js/uikit.min.js"></script>
+    <script src="/ai/uikit/js/uikit-icons.min.js"></script>
 	
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.27.5/js/uikit.min.js"></script>
   
@@ -58,7 +58,7 @@
         
        <a id="theme-toggle" class="desktop" onclick="modeSwitcher()"></a>
 	    
-      <a href="/art"><h1 style="text-transform:uppercase;">Art&nbsp;of Liz&nbsp;Lorena</h1></a>
+      <a href="/ai"><h1 style="text-transform:uppercase;">AI&nbsp;Images&nbsp;of Liz&nbsp;Lorena</h1></a>
 
 <p style="text-align:center;line-height: 135%;letter-spacing: 0.25em;text-transform: uppercase;margin-bottom:20px;"><a href="/art"><span uk-icon="icon: arrow-left"></span>&nbsp;Back to Gallery</a></p>
       	    	    
