--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <script src="https://kit.fontawesome.com/56182aba27.js" crossorigin="anonymous"></script>
 	
-	<link rel="stylesheet" href="/art/uikit/css/uikit.min.css" />
+	<link rel="stylesheet" href="/ai/uikit/css/uikit.min.css" />
 	
     <link href="/ai/index.css" rel="stylesheet">
 	
