--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,9 +1,9 @@
-<div uk-lightbox="animation: slide" class="uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid="masonry: true">
+<div class="uk-grid-small uk-child-width-1-3@s uk-text-center" uk-grid="masonry: true">
 
 {% for post in site.posts %}
 	
 <div class="post {{ post.tag }}"> 
-     <a href="{{ site.url }}/ai/img/{{ post.img }}" title="{{ post.title }}, {{ post.date | date: '%B %Y' }}" data-caption="{{ post.title }} | {{ post.date | date: '%B %Y' }} | {{ post.excerpt }}">
+     <a href="{{ site.url }}/ai{{ post.url }}" title="{{ post.title }}, {{ post.date | date: '%B %Y' }}" data-caption="{{ post.title }} | {{ post.date | date: '%B %Y' }} | {{ post.excerpt }}">
 	     <img src="{{ site.url }}/ai/img/{{ post.thumbnail }}" alt="{{ post.title }} by Liz Lorena">
 	</a>	
 </div>
